Bug 677832: Handle loops precisely in linear scan liveness phase. r=dvander